# NeonCircle

./: .gitignore  Cargo.toml  alerts.json  runloop.sh  rustfmt.toml
common/: Cargo.toml
common/src/: audio.rs  config.rs  lib.rs  radio.rs  sam.rs  statics.rs  traits.rs  utils.rs  video.rs  youtube.rs
common/src/global_data/: mod.rs  raw_azuracast.rs  raw_consent_data.rs  raw_guild_config.rs  raw_transcribe.rs  raw_voice_data.rs
common/src/voice_events/: commands.rs  mod.rs  user.rs
config-command/: Cargo.toml
config-command/src/: default_volume.rs  empty_channel_timeout.rs  lib.rs  radio_source.rs  read_titles.rs  transcribe.rs
dectalk/: Cargo.toml
dectalk/src/: lib.rs
lts/: Cargo.toml
lts/migrations/: 20240604231625_INIT.sql  20240607194530_REMINDERS.sql  20240608101134_FIX_DEFAULT_TIMEZONE.sql  20250116024527_VoicePreference.sql  20250117062946_TALK_OVER_EACHOTHER.sql
lts/src/: channel.rs  guild.rs  lib.rs  reminder.rs  user.rs
music-commands/: Cargo.toml
music-commands/src/: add.rs  autoplay.rs  consent.rs  join.rs  lib.rs  loop_queue.rs  mainloop.rs  pause.rs  remove.rs  repeat.rs  resume.rs  setbitrate.rs  settingsdata.rs  shuffle.rs  skip.rs  stop.rs  transcribe.rs  voice_preference.rs  volume.rs
national-debt/: Cargo.toml
national-debt/src/: lib.rs
neon_circle/: Cargo.toml
neon_circle/src/: main.rs
neon_circle/src/commands/: embed.rs  feedback.rs  john.rs
neon_circle/src/commands/remind/: mod.rs
neon_circle/src/context_menu/: mod.rs
neon_circles/: Cargo.toml
neon_circles/src/: main.rs  radio.rs  traits.rs  utils.rs  video.rs  youtube.rs
neon_circles/src/commands/: embed.rs  feedback.rs  john.rs  mod.rs
neon_circles/src/commands/config/: default_volume.rs  empty_channel_timeout.rs  mod.rs  radio_source.rs  read_titles.rs  transcribe.rs
neon_circles/src/commands/music/: add.rs  autoplay.rs  consent.rs  join.rs  loop_queue.rs  mainloop.rs  mod.rs  pause.rs  remove.rs  repeat.rs  resume.rs  setbitrate.rs  settingsdata.rs  shuffle.rs  skip.rs  stop.rs  transcribe.rs  volume.rs
neon_circles/src/global_data/: raw_azuracast.rs  raw_consent_data.rs  raw_guild_config.rs  raw_transcribe.rs  raw_voice_data.rs
neon_circles/src/voice_events/: commands.rs  mod.rs  user.rs
oldshit/: attachmentinput.rs
src/: bigwetsloppybowser.rs  config.rs  consent.rs  main.rs  radio.rs  sam.rs  video.rs  voice_events.rs  voice_events.rs.old  youtube.rs
src/commands/: embed.rs  emulate.rs  feedback.rs  john.rs  mod.rs
src/commands/config/: default_radio_volume.rs  default_song_volume.rs  empty_channel_timeout.rs  mod.rs  read_titles.rs
src/commands/music/: add.rs  autoplay.rs  consent.rs  join.rs  loop_queue.rs  loopit.rs  mainloop.rs  mod.rs  pause.rs  play.rs  remove.rs  repeat.rs  resume.rs  setbitrate.rs  settingsdata.rs  shuffle.rs  skip.rs  stop.rs  transcribe.rs  volume.rs
src/commands/remind/: mod.rs
src/global_data/: consent.rs  mod.rs  raw_azuracast.rs  raw_consent_data.rs  raw_guild_config.rs  raw_transcribe.rs  raw_voice_data.rs  voice_data.rs
src/voice_events/: commands.rs  mod.rs  user.rs
voice_events/: Cargo.toml
voice_events/src/: commands.rs  lib.rs  user.rs
voice_events/src/gemini/: mod.rs
