[package]
name = "alrightguysnewprojecttime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.200"
serde_json = "1.0.116"
serenity = { version = "0.11.7", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "voice", "cache", "collector"] }
tokio = { version = "1.23.0", features = ["full"] }
ytd-rs = { version = "0.1.7", features = ["yt-dlp"] }
nanoid = "0.4.0"
poll-promise = { version = "0.2.0", features = ["tokio"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
dirs = "5.0.0"
anyhow = "1.0.68"
audiotags = "0.4.1"
songbird = {version = "0.3.2", features = ["yt-dlp", ]}
# url = "2.3.1"
reqwest = "0.11.13"
# html = "0.1.1"
rand = "0.8.5"
# rayon = "1.5.3"
ffprobe = "0.3.3"
base64 = "0.21.0"
async-recursion = "1.0.0"
image = "0.24.5"
lazy_static = "1.4.0"
chrono = "0.4.31"
linkify = "0.10.0"
env_logger = "0.10.0"
urlencoding = "2.1.3"
regex = "1.10.4"

# windows only
[target.'cfg(windows)'.dependencies]
powershell_script = "1.0.4"


# [profile.release]
# lto = true
# codegen-units = 1
# panic = "abort"

[features]
default = ["all"]
all = ["spotify", "youtube-search", "tts", "read-titles-by-default", "new-controls", "transcribe"]
transcribe = []
download = []
spotify = []
youtube-search = []
tts = []
read-titles-by-default = []
new-controls = []

experimental = ["google-journey-tts"]
google-journey-tts = ["tts"]

# funny
misogyny = []
misandry = []
