[package]
name = "alrightguysnewprojecttime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.201"
serde_json = "1.0.117"
serenity = { version = "0.11.7", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "voice", "cache", "collector"] }
tokio = { version = "1.37.0", features = ["full"] }
ytd-rs = { version = "0.1.7", features = ["yt-dlp"] }
nanoid = "0.4.0"
poll-promise = { version = "0.3.0", features = ["tokio"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dirs = "5.0.1"
anyhow = "1.0.83"
audiotags = "0.5.0"
songbird = {version = "0.3.2"}
symphonia = {version = "0.5.4", features = ["all"]}
# url = "2.3.1"
reqwest = {version = "0.12.4", features = ["json"]}
# html = "0.1.1"
rand = "0.8.5"
# rayon = "1.5.3"
ffprobe = "0.4.0"
base64 = "0.22.1"
async-recursion = "1.1.1"
image = "0.25.1"
lazy_static = "1.4.0"
chrono = "0.4.38"
linkify = "0.10.0"
env_logger = "0.11.3"
urlencoding = "2.1.3"
regex = "1.10.4"

# windows only
[target.'cfg(windows)'.dependencies]
powershell_script = "1.0.4"


# [profile.release]
# lto = true
# codegen-units = 1
# panic = "abort"

[features]
default = ["all"]
all = ["spotify", "youtube-search", "tts", "read-titles-by-default", "new-controls", "transcribe"]
transcribe = []
download = []
spotify = []
youtube-search = []
tts = []
read-titles-by-default = []
new-controls = []

experimental = ["google-journey-tts"]
google-journey-tts = ["tts"]

# funny
misogyny = []
misandry = []
