[package]
name = "common"
version = "0.0.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.2", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "voice",
    "cache",
    "collector",
    "unstable_discord_api",
] }
anyhow = "1.0.91"
log = "0.4.22"
serde = { version = "1.0.214", features = ["rc"] }
serde_json = { version = "1.0.132", features = ["preserve_order"] }
dirs = "5.0.1"
tokio = { version = "1.41.0", features = ["full"] }
reqwest = { version = "0.11.27", features = ["json"] }
lazy_static = "1.5.0"
songbird = { version = "0.4.3" }
symphonia = { version = "0.5.4", features = ["all"] }
ytd-rs = { version = "0.1.7", features = ["yt-dlp"] }
nanoid = "0.4.0"
ffprobe = "0.4.0"
urlencoding = "2.1.3"
base64 = "0.22.1"
audiotags = "0.5.0"
rand = "0.8.5"
chrono = "0.4.38"
chrono-tz = "0.10.0"

[features]
default = ["transcribe", "youtube-search", "tts", "spotify", "google-journey-tts", "seq"]
misandry = []
misogyny = []
google-journey-tts = []
transcribe = ["songbird/receive"]
youtube-search = []
tts = []
spotify = []
seq = []
