[package]
name = "neon_circle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
common = { path = "../common" }
config_command = { path = "../config-command" }
music_commands = { path = "../music-commands" }
national_debt = { path = "../national-debt" }
serde = { version = "1.0.203", features = ["rc"] }
serde_json = { version = "1.0.117", features = ["preserve_order"] }
# poll-promise = { version = "0.3.0", features = ["tokio"] }
tracing = "0.1.40"
# tracing-subscriber = "0.3.18"
anyhow = "1.0.86"
# url = "2.3.1"
# html = "0.1.1"
# rayon = "1.5.3"
# async-recursion = "1.1.1"
env_logger = "0.11.3"
image = "0.25.1"
console-subscriber = { version = "0.2.0", optional = true }


[features]
default = ["all", "experimental"]
all = [
    "spotify",
    "youtube-search",
    "tts",
    "read-titles-by-default",
    "transcribe",
]
transcribe = []
download = []
spotify = []
youtube-search = []
tts = []
read-titles-by-default = []

experimental = ["google-journey-tts", "new-controls"]
new-controls = []
google-journey-tts = ["tts"]

debug = ["dep:console-subscriber"]

# funny
misogyny = []
misandry = []
