[package]
name = "alrightguysnewprojecttime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1.0.203", features = ["rc"] }
common = { path = "../common" }
serde_json = { version = "1.0.117", features = ["preserve_order"] }
tokio = { version = "1.37.0", features = ["full"] }
ytd-rs = { version = "0.1.7", features = ["yt-dlp"] }
nanoid = "0.4.0"
# poll-promise = { version = "0.3.0", features = ["tokio"] }
tracing = "0.1.40"
# tracing-subscriber = "0.3.18"
anyhow = "1.0.86"
audiotags = "0.5.0"
songbird = { version = "0.4.1" }
symphonia = { version = "0.5.4", features = ["all"] }
# url = "2.3.1"
reqwest = { version = "0.11.27", features = ["json"] }
# html = "0.1.1"
rand = "0.8.5"
# rayon = "1.5.3"
ffprobe = "0.4.0"
base64 = "0.22.1"
# async-recursion = "1.1.1"
env_logger = "0.11.3"
image = "0.25.1"
lazy_static = "1.4.0"
chrono = "0.4.38"
linkify = "0.10.0"
urlencoding = "2.1.3"
regex = "1.10.4"
console-subscriber = { version = "0.2.0", optional = true }
sqlx = "0.7.4"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[features]
default = ["all", "experimental"]
all = [
    "spotify",
    "youtube-search",
    "tts",
    "read-titles-by-default",
    "transcribe",
]
transcribe = ["songbird/receive"]
download = []
spotify = []
youtube-search = []
tts = []
read-titles-by-default = []

experimental = ["google-journey-tts", "new-controls"]
new-controls = []
google-journey-tts = ["tts"]

debug = ["dep:console-subscriber"]

# funny
misogyny = []
misandry = []
